--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,3 +1,5 @@
+
+
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
 default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
@@ -10,10 +12,14 @@ default.invalid.max.size.message=Property [{0}] of class [{1}] with value [{2}] 
 default.invalid.min.size.message=Property [{0}] of class [{1}] with value [{2}] is less than the minimum size of [{3}]
 default.invalid.validator.message=Property [{0}] of class [{1}] with value [{2}] does not pass custom validation
 default.not.inlist.message=Property [{0}] of class [{1}] with value [{2}] is not contained within the list [{3}]
-default.blank.message=Property [{0}] of class [{1}] cannot be blank
+default.blank.message=All fields are Mandatory!
 default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot equal [{3}]
-default.null.message=Property [{0}] of class [{1}] cannot be null
+default.null.message=All fields are Mandatory!
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
+
+hotelRegistration.email.not.unique.message= Username already exists!
+hotelRegistration.gstin.not.unique.message= GSTIN already exists for another Hotel
+
 
 default.paginate.prev=Previous
 default.paginate.next=Next
